[project]
name = "knowledge-base"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.13"

dependencies = [
    "aiofiles>=25.1.0",
    "fastapi>=0.138.1",
    "flagembedding>=1.4.0",
    "grandalf>=0.8",
    "langchain==0.3.23",
    "langchain-community==0.3.20",
    "langchain-openai==0.3.0",
    "langgraph==0.2.50",
    "loguru>=0.7.3",
    "magic-pdf>=1.3.12",
    "mineru-open-sdk>=0.2.5",
    "minio>=7.2.20",
    "modelscope>=1.37.1",
    "neo4j>=6.2.0",
    "pandas==2.2.3",
    "pymilvus>=3.0.0",
    "pymilvus-model>=0.3.2",
    "pymongo>=4.17.0",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.32",
    "regex>=2026.5.9",
    "requests>=2.34.2",
    "torch==2.2.2",
    "torchaudio==2.2.2",
    "torchvision==0.17.2",
    "uvicorn>=0.49.0",
]

[tool.uv]
override-dependencies = [
    "onnxruntime==1.16.3",
    "numpy<2.0",
    "torch==2.2.2",
    "torchvision==0.17.2",
    "torchaudio==2.2.2"
]
